# SupportBot

./: .gitignore  pyproject.toml
supportbot/: .env_example  bot.py  config_reader.py  testPostgres.py  testRedis.py  test_func.py
supportbot/db/: commands.py
supportbot/handlers/: ban.py  banned_or_unbanned.py  incorrect_messages.py  my_id.py  on_edited.py  order_food.py  send_to_admin.py  start.py
supportbot/keyboards/: food_keyboard.py  sizes_keyboard.py
supportbot/middlewares/: GetAllTitlesAndSizesMiddleWare.py
supportbot/states/: food_states.py
